new tour dates/links

--- a/tickets.html
+++ b/tickets.html
@@ -86,6 +86,256 @@
               >
           </div>
 
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 15th, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>Beachland Tavern</p>
+            </div>
+            <div class="tourLocation">
+              <p>Cleveland, OH</p>
+            </div>
+              <a
+                href="https://link.dice.fm/xb9a93d07ad7"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 16th, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>Mr. Roboto Project</p>
+            </div>
+            <div class="tourLocation">
+              <p>Cleveland, OH</p>
+            </div>
+              <a
+                href="https://www.ticketleap.events/tickets/dltsgdom/all-under-heaven"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 17th, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>Maggie's Bar & Grill</p>
+            </div>
+            <div class="tourLocation">
+              <p>Lakewood, NJ</p>
+            </div>
+              <a
+                href="https://link.dice.fm/Yd920b35b773"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 18th, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>The Sinclair</p>
+            </div>
+            <div class="tourLocation">
+              <p>Cambridge, MA</p>
+            </div>
+              <a
+                href="https://www.axs.com/events/1214457/glare-tickets?skin=sinclair"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 20th, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>Ottobar</p>
+            </div>
+            <div class="tourLocation">
+              <p>Baltimore, MD</p>
+            </div>
+              <a
+                href="https://www.etix.com/ticket/p/31029912/glare-with-all-under-heaven-baltimore-ottobar"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 21st, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>Richmond Music Hall</p>
+            </div>
+            <div class="tourLocation">
+              <p>Richmond, VA</p>
+            </div>
+              <a
+                href="https://www.etix.com/ticket/p/30218104/glare-wall-under-heaven-richmond-richmond-music-hall"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 22nd, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>The Pinhook</p>
+            </div>
+            <div class="tourLocation">
+              <p>Durham, NC</p>
+            </div>
+              <a
+                href="https://www.andmoreagainpresents.com/#/events/162307"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 23rd, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>The Masquerade - Altar</p>
+            </div>
+            <div class="tourLocation">
+              <p>Atlanta, GA</p>
+            </div>
+              <a
+                href="https://www.ticketmaster.com/event/0E006366EFF4B21A"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 24th, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>Conduit</p>
+            </div>
+            <div class="tourLocation">
+              <p>Winter Park, FL</p>
+            </div>
+              <a
+                href="https://www.ticketweb.com/event/glare-all-under-heaven-and-conduit-tickets/14682303"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 25th, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>American Legion Post 92</p>
+            </div>
+            <div class="tourLocation">
+              <p>Hollywood, FL</p>
+            </div>
+              <a
+                href="https://events.com/r/en_US/tickets/glare-all-under-heaven--more-january-25th-american-legion-post-92-hollywood-january-1014060"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 27th, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>The Crowbar</p>
+            </div>
+            <div class="tourLocation">
+              <p>Tampa, FL</p>
+            </div>
+              <a
+                href="https://www.ticketweb.com/event/glare-all-under-heaven-and-crowbar-tickets/14682283"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 28th, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>Real Cool Time Records</p>
+            </div>
+            <div class="tourLocation">
+              <p>Tallahassee, FL</p>
+            </div>
+              <a
+                class="tourLink"
+                >NO PRESALE</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 29th, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>Gasa Gasa</p>
+            </div>
+            <div class="tourLocation">
+              <p>New Orleans, LA</p>
+            </div>
+              <a
+                href="https://tickets.venuepilot.com/e/glare-with-all-under-heaven-2026-01-29-main-gasa-gasa-new-orleans-7226ee"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
+          <div class="tourBorder">
+            <div class="tourDates">
+              <p>January 31st, 2026</p>
+            </div>
+            <div class="tourVenue">
+              <p>The End</p>
+            </div>
+            <div class="tourLocation">
+              <p>Nashville, TN</p>
+            </div>
+              <a
+                href="https://www.tixr.com/groups/legacyconcerts/events/all-under-heaven-167736"
+                class="tourLink"
+                target="_blank"
+                >TICKETS</a
+              >
+          </div>
+
         </section>
 
         <section class="tourAnnouncements">
